<resources>
    //page de connexion
    <string name="username">Utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="txtLogin">Page de connexion</string>
    <string name="btnLogin">Connexion</string>
    <string name="btnTraduction">Changer la langue</string>
    <string name="txtConnectionY">Connexion réussie</string>
    <string name="txtConnectionN">Connexion échouée</string>
    <string name="txtChooseLanguage">Choisissez votre langue</string>

    //page principale
    <string name="app_name">Station météo</string>
    <string name="action_settings">Paramètres</string>
    <string name="messages_received">Rx:</string>
    <string name="publish_to_topic">Envoyer au topic</string>
    <string name="publish">Publier</string>
    <string name="subscribe">Recevoir</string>
    <string name="subscribe_to_topic">Recevoir du topic</string>
    <string name="message_payload">Message reçu</string>
    <string name="topicHumidite">zigbee2mqtt/0x00124b00251323c1/humidity</string>
    <string name="messageInfo">Voici les données que nous pouvons récupérées grâce au broker</string>

    //page parametre
    <string name="broker">Broker</string>
    <string name="api">API</string>
    <string name="minRange">Valeur minimale</string>
    <string name="maxRange">Valeur maximale</string>
    <string name="txtSettings">Page de paramètres</string>
    <string name="btnSettings">Enregistrer</string>
    <string name="txtSettingsY">Les champs Broker et API ne doivent pas être vide</string>
    <string name="txtSettingsN">Paramètres enregistrés</string>
</resources>