<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".ParametreActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/txtSettings"
                android:layout_marginBottom="30dp"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/labelBroker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/broker"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/broker"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/broker"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/labelApi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/api"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/api"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/api"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/rangeMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minRange"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/min"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/minRange"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/rangeMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxRange"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/max"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/maxRange"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/settingsSave"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/btnSettings"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="20dp">
            </Button>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>