<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/headingMsgPayload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:text="Nombre de message récupérés :"
        app:layout_constraintEnd_toStartOf="@+id/textViewNumMsgs"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headingNumRxMsgs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/messages_received"
        app:layout_constraintEnd_toStartOf="@+id/textViewNumMsgs"
        app:layout_constraintHorizontal_bias="0.991"
        app:layout_constraintStart_toEndOf="@+id/headingMsgPayload"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNumMsgs"
        android:layout_width="24dp"
        android:layout_height="18dp"
        android:layout_marginTop="108dp"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextMsgPayload"
        android:layout_width="184dp"
        android:layout_height="39dp"
        android:gravity="bottom"
        android:hint="@string/message_payload"
        android:imeOptions="actionDone"
        android:inputType="textUri"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <TextView
        android:id="@+id/textViewMsgPayload"
        android:layout_width="338dp"
        android:layout_height="206dp"
        android:gravity="bottom"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <EditText
        android:id="@+id/editTextSubTopic"
        android:layout_width="173dp"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="28dp"
        android:gravity="bottom"
        android:hint="@string/topicHumidite"
        android:imeOptions="actionDone"
        android:inputType="textUri"
        android:text="@string/topicHumidite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMsgPayload" />

    <EditText
        android:id="@+id/editTextPubTopic"
        android:layout_width="159dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:gravity="bottom"
        android:hint="@string/topicHumidite"
        android:imeOptions="actionDone"
        android:inputType="textUri"
        android:text="@string/topicHumidite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toEndOf="@+id/editTextSubTopic"
        app:layout_constraintTop_toBottomOf="@+id/editTextMsgPayload" />

    <Button
        android:id="@+id/btnPub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSub"
        app:layout_constraintTop_toBottomOf="@+id/editTextPubTopic" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:text="@string/subscribe"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSubTopic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:text="@string/messageInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="47dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/baseline_settings_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047"
        android:textColor="@color/lavender"
        android:textSize="36sp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>